Solucionado el problema de mostrar mensajes de error en login

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/login.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/login.html
@@ -8,11 +8,14 @@
 
 <div class="container">
   <h2><span th:text="#{identificate.title}"></span></h2>
-  <form class="form-horizontal" method="post" action="/login">
+  <form class="form-horizontal" method="post" action="/customLogin" th:object="${user}" >
     <div class="form-group">
-      <label class="control-label col-sm-2" for="username">Email:</label>
+      <label class="control-label col-sm-2" for="email">Email:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" name="username"  />
+        <input type="text" class="form-control" name="email"  />
+        <p class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}" />
+         
+       
       </div>
     </div>
    
@@ -21,6 +24,7 @@
     	<label class="control-label col-sm-2" for="password"><span th:text="#{password.title}"></span></label>
     	<div class="col-sm-10">
     		<input type="password" class="form-control" name="password" />
+    		 <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}" />
     	</div>
     </div>
    
