fix httpsession money

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/money.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/money.html
@@ -3,10 +3,10 @@
 <div class="container-fluid">
 <p>
 <b>Email: </b>
-<b th:text="${user.email}"/>
+<b th:text="${session.user.email}"/>
 </p>
 <p>
-<b th:text="${user.money}"/>
+<b th:text="${session.user.money}"/>
 <b >Euros</b>
 </p>
 		
