--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/nav.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/nav.html
@@ -18,9 +18,14 @@
 		
 			</ul>
        </li>
-
-
-
+			<li id="sale-menu" class="dropdown"><a
+					class="dropdown-toggle" data-toggle="dropdown" href="#"> <span
+						th:text="#{sale.message}">Notas</span><span
+						class="caret"></span>
+				</a>
+					<ul class="dropdown-menu">
+						<li><a href="/sale/add"><span th:text="#{sale.add}">Nueva Oferta</span></a></li>
+					</ul></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown"><a id="btnLanguage" href="#"
