--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/add.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/add.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="pwd"><span th:text="#{sale.add.saleCost}">Coste:</span></label>
+				<label class="control-label" for="pwd"><span th:text="#{sale.add.saleCost}">Coste:</span></label>
 				<div class="col-sm-10">
 					<input type="number" class="form-control" name="cost"
 						placeholder="5" required="true" /><span
