--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/add.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/add.html
@@ -37,10 +37,17 @@
 				</div>
 			</div>
 			<div class="form-group">
+				<label class="control-label col-sm-2"  for="checkbox"><span th:text="#{checkbox.outstanding}"></span></label>
+				<div class="col-sm-10">
+					<input type="checkbox" name="checkbox" value="checkbox" />
+				</div>
+			</div>
+			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
 					<button type="submit" class="btn btn-primary"><span th:text="#{sale.add.send}">Enviar</span></button>
 				</div>
 			</div>
+			
 		</form>
 	</div>
 	<footer th:replace="fragments/footer" />
