Ampliación 6.4 terminada (sin pruebas)

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/user_sales.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/user_sales.html
@@ -17,6 +17,11 @@
 						<td th:text="${sale.cost}">10</td>
 						<td><a th:href="${'/sale/delete/' + sale.id}"><span
 								th:text="#{sale.delete.submit}">Eliminar Oferta</span></a></td>
+								
+						<td th:unless="${sale.outstanding}"><a th:href="${'/sale/highlight/' + sale.id}"><span
+								th:text="#{sale.highlight.submit}">Destacar</span></a></td>
+						<td th:if="${sale.outstanding}==true"><a th:href="${'/sale/unhighlight/' + sale.id}"><span
+								th:text="#{sale.unhighlight.submit}">No destacar</span></a></td>
 					</tr>
 				</tbody>
 			</table>
