--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/list.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/list.html
@@ -4,6 +4,7 @@
 <body>
 
 	<nav th:replace="fragments/nav" />
+	<div sec:authorize="hasRole('ROLE_USER')" th:replace="fragments/money"/>
 
 
 
@@ -18,8 +19,12 @@
 			</div>
 			<button type="submit" class="btn btn-default">Buscar</button>
 		</form>
+		
 		<div th:replace="fragments/user_sales" th:fragment="userSales"/>
-	</div>
+		<p class="text-danger"  th:text="#{Error.sale.money}" th:if="${error}"></p>
+		</div>
+		
+	
 
 	<footer th:replace="fragments/footer" />
 </body>
