--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/index.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
 <body>
 
 	<nav th:replace="fragments/nav"/>
+	
+	<div sec:authorize="hasRole('ROLE_USER')" th:replace="fragments/money"/>
 
 	<div class ="container"style="text-align: center">
 		<h2 th:text="#{welcome.message}"></h2>
