--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/add.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/add.html
@@ -4,6 +4,7 @@
 <body>
 
 	<nav th:replace="fragments/nav" />
+	<div sec:authorize="hasRole('ROLE_USER')" th:replace="fragments/money"/>
 
 	<div class="container">
 		<h2><span th:text="#{sale.add.title}">Nueva Oferta</span></h2>
@@ -40,6 +41,7 @@
 				<label class="control-label col-sm-2"  for="checkbox"><span th:text="#{checkbox.outstanding}"></span></label>
 				<div class="col-sm-10">
 					<input type="checkbox" name="checkbox" value="checkbox" />
+					<p class="text-danger" th:if="${#fields.hasErrors('user')}" th:errors="*{user}"/>
 				</div>
 			</div>
 			<div class="form-group">
