Ahora aparecen todas las ofertas  en la lista (las propias no deja comprarlas)

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/shopping.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/shopping.html
@@ -39,13 +39,17 @@
 						<td th:text="${sale.title}">Title</td>
 						<td th:text="${sale.description}">Descripcion</td>
 						<td th:text="${sale.cost}">10</td>
-						<td th:if="${sale.available}"><a th:href="${'/sale/buy/' + sale.id}"><span
+						<td th:if="${sale.available and  user!=sale.user}"><a th:href="${'/sale/buy/' + sale.id}"><span
 								th:text="#{sale.buy.submit}">Comprar</span></a></td>
 								
 						<td th:unless="${sale.available}"><span
 								th:text="#{sale.sold}">Vendido</span></td>
 						
+						
+						<td th:if="${ user==sale.user}" class="col-md-1"> </td>
 						<td th:text="#{outstanding.message}">10</td>
+						
+					
 					</tr>
 					
 				
@@ -54,11 +58,13 @@
 						<td th:text="${sale.title}">Title</td>
 						<td th:text="${sale.description}">Descripcion</td>
 						<td th:text="${sale.cost}">10</td>
-						<td th:if="${sale.available}"><a th:href="${'/sale/buy/' + sale.id}"><span
+						<td th:if="${sale.available and  user!=sale.user}"><a th:href="${'/sale/buy/' + sale.id}"><span
 								th:text="#{sale.buy.submit}">Comprar</span></a></td>
 								
 						<td th:unless="${sale.available}"><span
 								th:text="#{sale.sold}">Vendido</span></td>
+								
+						<td th:if="${ user==sale.user}" class="col-md-1"> </td>
 					</tr>
 				</tbody>
 			</table>
