--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/add.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/add.html
@@ -13,7 +13,7 @@
 				<label class="control-label col-sm-2" for="title"><span th:text="#{sale.add.saleTitle}">Titulo:</span></label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" name="title"
-						placeholder="Mi oferta" required="true" /><p
+						placeholder="Mi oferta" /><p
 						class="text-danger" th:if="${#fields.hasErrors('title')}"
 						th:errors="*{title}"/>
 				</div>
