--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/nav.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/nav.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-			
+			<li sec:authorize="isAuthenticated()"><a href="/home">Home</a></li>
 			<li id= "users-menu" class="dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
        		<a href="#" class="dropdown-toggle" data-toggle="dropdown"  >
        			<span th:text="#{gestionUsuarios.title}"></span>  <span class="caret"></span>
