--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/list.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/list.html
@@ -17,7 +17,7 @@
 				<input name="searchText" type="text" class="form-control" size="50"
 					placeholder="Busca por titulo">
 			</div>
-			<button type="submit" class="btn btn-default">Buscar</button>
+			<button type="submit" class="btn btn-default"><span th:text="#{find.submit}"></span></button>
 		</form>
 		
 		<div th:replace="fragments/user_sales" th:fragment="userSales"/>
