--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/shopping.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/shopping.html
@@ -19,9 +19,9 @@
 			</div>
 			<button type="submit" class="btn btn-default"><span th:text="#{find.submit}"></span></button>
 		</form>
-		<div><span class="text-danger" th:if="${error1}" th:text="#{error.sale.invalidUser}"></span>
-			<span class="text-danger" th:if="${error2}" th:text="#{error.sale.notAvailable}"></span>
-			<span class="text-danger" th:if="${error3}" th:text="#{error.sale.insufficientMoney}"></span>
+		<div><p class="text-danger" th:if="${error1}" th:text="#{error.sale.invalidUser}"></p>
+			<p class="text-danger" th:if="${error2}" th:text="#{error.sale.notAvailable}"></p>
+			<p class="text-danger" th:if="${error3}" th:text="#{error.sale.insufficientMoney}"></p>
 		</div>
 		<div class="table-responsive">
 			<table class="table table-hover"
