--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/user/list.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/user/list.html
@@ -10,11 +10,11 @@
 
 
 <div class="container">
-  <h2>Usuarios</h2>
+  <h2 th:text="#{table.users.title}"></h2>
   
   
-  <p>Los usuarios que actualmente figuran en el sistema son los siguientes:</p>
-  <button type="button" id="updateButton" class="btn btn-default">Actualizar</button>
+  <p th:text="#{table.users.message}"></p>
+  <button type="button" id="updateButton" class="btn btn-default"><span th:text="#{table.users.update}"></span></button>
   <script>
   	$( "#updateButton").click(function() {
   		$("#tableUsers").load('/user/list/update');
