--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/shopping.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/shopping.html
@@ -55,7 +55,8 @@
 						
 						
 						<td th:if="${ user==sale.user}" class="col-md-1"> </td>
-						<td th:if="${ user==sale.user}" class="col-md-1"> </td>
+						
+						<td th:unless="${ sale.available and  user!=sale.user}" class="col-md-1"> </td>
 						<td th:text="#{outstanding.message}">10</td>
 						
 					
@@ -77,6 +78,7 @@
 								th:text="#{sale.sold}">Vendido</span></td>
 								
 						<td th:if="${ user==sale.user}" class="col-md-1"> </td>
+						<td th:unless="${ sale.available and  user!=sale.user}" class="col-md-1"> </td>
 					</tr>
 				</tbody>
 			</table>
