--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/shopping.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/sale/shopping.html
@@ -47,16 +47,21 @@
 						<td th:if="${sale.available and  user!=sale.user}"><a th:href="${'/sale/buy/' + sale.id}"><span
 								th:text="#{sale.buy.submit}">Comprar</span></a></td>
 								
-						<td th:if="${sale.available and  user!=sale.user}"><a th:href="${'/sale/conversation/' + sale.id}"><span
-								>Chat</span></a></td>
-								
 						<td th:if="${!sale.available and  user!=sale.user}"><span
 								th:text="#{sale.sold}">Vendido</span></td>
+								
+								
+						
+								
+						
 						
 						
 						<td th:if="${ user==sale.user}" class="col-md-1"> </td>
 						
-						<td th:unless="${ sale.available and  user!=sale.user}" class="col-md-1"> </td>
+						<td ><a th:href="${'/sale/conversation/' + sale.id}"><span
+								>Chat</span></a></td>
+						
+						
 						<td th:text="#{outstanding.message}">10</td>
 						
 					
@@ -70,15 +75,17 @@
 						<td th:text="${sale.cost}">10</td>
 						<td th:if="${sale.available and  user!=sale.user}"><a th:href="${'/sale/buy/' + sale.id}"><span
 								th:text="#{sale.buy.submit}">Comprar</span></a></td>
-								
-						<td th:if="${sale.available and  user!=sale.user}"><a th:href="${'/sale/conversation/' + sale.id}"><span
-								>Chat</span></a></td>		
-								
+							
 						<td th:if="${!sale.available and  user!=sale.user}"><span
-								th:text="#{sale.sold}">Vendido</span></td>
+								th:text="#{sale.sold}">Vendido</span></td>	
+						
+								
+						
 								
 						<td th:if="${ user==sale.user}" class="col-md-1"> </td>
-						<td th:unless="${ sale.available and  user!=sale.user}" class="col-md-1"> </td>
+						<td ><a th:href="${'/sale/conversation/' + sale.id}"><span
+								>Chat</span></a></td>		
+						
 					</tr>
 				</tbody>
 			</table>
