--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/nav.html
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/templates/fragments/nav.html
@@ -28,6 +28,7 @@
 						<li><a href="/sale/list"><span th:text="#{sale.list}">Mis Ofertas</span></a></li>
 						<li><a href="/sale/user/buys"><span th:text="#{sale.userBuys.title}">Ofertas Compradas</span></a></li>
 					</ul></li>
+				<li sec:authorize="hasRole('ROLE_USER')" class="active"><a href="/conversation/list"><span th:text="#{conversation.list.title}"></span></a></li>
 				<li sec:authorize="hasRole('ROLE_USER')" class="active"><a href="/sale/shopping"><span th:text="#{shopping.message}"></span></a></li>
 				
 			</ul>
